# gnome-control-center

./: meson.build
panels/: app-printer-dialog.ui
panels/info-overview/: cc-info-overview-panel.c
panels/printers/: app-printer-dialog.ui  cc-printers-panel.c  meson.build  pp-app-printer-dialog.c  pp-app-printer-dialog.h  pp-cups.c  pp-cups.h  pp-dns-row.c  pp-dns-row.h  pp-dns-row.ui  pp-dns-window.c  pp-dns-window.h  pp-dns-window.ui  pp-ipp-device.c  pp-ipp-device.h  pp-new-printer-dialog.c  pp-printer-app-selection-dialog.c  pp-printer-app-selection-dialog.h  pp-printer-entry.c  pp-printer-entry.h  pp-utils.c  printer-entry.ui  printerappselectiondialog.ui  printers.gresource.xml  printers.ui
shell/: main.c
